feat(main):I ve changed the font into bree sherif

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>José Maurel - Portfolio</title>
     <meta name="description" content="José Maurel - Computer Science Student & Software Developer from Benin">
@@ -242,10 +243,10 @@
                         </a>
                     </div>
                     <div class="experience-content">
-                        <h3>Network Infrastructure Intern</h3>
+                        <h3>Network Infrastructure Intern - Industrial Attachment Training</h3>
                         <p class="company">Ghana Grid Company Ltd - Accra, Ghana</p>
                         <p class="duration">2024</p>
-                        <p class="description">Enhanced networking knowledge through hands-on experience in switch, router, and access point configuration and management. Gained practical experience in enterprise network infrastructure.</p>
+                        <p class="description">My missions have been clearly defined: - Contribute to the improvement of network systems through training - In Network: from its fundamentals to the use and configuration of network Tools. - In optical fiber: its operation, the key factors for optimal gain fiber optic resources - Assist my colleagues with network or hardware issues within the group. - Attend meetings on the operation of electrical energy transmission from its production to its distribution.</p>
                     </div>
                 </article>
             </div>
