feat(main):Being able to download my cv

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     </a>
                 </div>
                 <div class="action-buttons">
-                    <button class="btn-primary hire-btn"> 
-                        Hire me <i class="fa-solid fa-plus"></i>
+                    <button class="btn-primary hire-btn"> <a href="CV Maurel KOUASSI.pdf" download="CV Maurel KOUASSI 1 (2).pdf"> 
+                        Hire me <i class="fa-solid fa-plus"></i> </a>
                     </button>
                     <button class="btn-secondary copy-email-btn" onclick="copyEmail()"> 
                         Copy Email <i class="fa-solid fa-copy"></i>
